# Ambient-Diffusion-Planner

./: README.md  file_org.py  sim_flow_planner_eval.sh
Diffusion-Planner/: count_missing_states.py  data_process.py  metadata_process.py  run_nuboard.ipynb  sim_demo_fraprd.sh  sim_demo_fraprd_env_setup.sh  torch_run.sh  train_predictor.py
Diffusion-Planner/train_splits/: nuplan_train_000.json  nuplan_train_001.json  nuplan_train_002.json  nuplan_train_005.json  nuplan_train_007.json  nuplan_train_008.json  nuplan_train_012.json  nuplan_train_013.json  nuplan_train_014.json  nuplan_train_015.json  nuplan_train_019.json  nuplan_train_020.json  nuplan_train_022.json  nuplan_train_023.json  nuplan_train_024.json  nuplan_train_029.json  nuplan_train_030.json  nuplan_train_031.json  nuplan_train_033.json  nuplan_train_036.json  nuplan_train_037.json  nuplan_train_038.json  nuplan_train_041.json  nuplan_train_043.json  nuplan_train_044.json  nuplan_train_046.json  nuplan_train_049.json  nuplan_train_051.json  nuplan_train_052.json  nuplan_train_053.json  nuplan_train_058.json  nuplan_train_064.json  nuplan_train_065.json  nuplan_train_072.json  nuplan_train_075.json  nuplan_train_076.json  nuplan_train_078.json  nuplan_train_080.json  nuplan_train_082.json  nuplan_train_085.json  (+306 more)
Diffusion-Plannerv2/: preprocess_dataset.py  train_pl.py
Diffusion-Plannerv2/diffusion_planner/: loss.py  train_epoch.py  train_epoch_factorized.py
Plan-R1/: dataset_summary.py  preprocess_dataset.py  train.py  val.py
Plan-R1/datamodules/: nuplan_datamodule.py
Plan-R1/datasets/: nuplan_dataset.py
Plan-R1/metrics/: cumulative_reward.py  minJointADE.py  minJointFDE.py
Plan-R1/model/: PlanR1.py
Plan-R1/modules/: backbone.py
Plan-R1/transforms/: token_builder.py
Plan-R1/visualization/: visualization.py
Plan-R1/wandb/: latest-run
UniTraj/: setup.py
UniTraj/unitraj/: test.py  train.py
ambient-diffusion/: dataset_summary.py  sample.ipynb  train.py  train_pl.py
ambient-diffusion/datamodules/: __init__.py  nuplan_datamodule.py
ambient-diffusion/datasets/: __init__.py  dataset_checker.py  nuplan_dataset.py  nuplan_dataset_v2.py  nuplan_utils.py
ambient-diffusion/diffusion_utils/: __init__.py  dpm_solver_pytorch.py  sampling.py
ambient-diffusion/layers/: graph_attention.py  two_layer_mlp.py
ambient-diffusion/model/: __init__.py  diffusion.py
ambient-diffusion/models/: __init__.py  diffusion.py
ambient-diffusion/modules/: __init__.py  agent_encoder.py  backbone.py  diffuser.py  map_encoder.py
ambient-diffusion/transforms/: target_builder.py
ambient-diffusion/utils/: __init__.py  process_data.py  train_utils.py
diffusion-planner-v2/: check_model_ema.py  create_balanced_dataset.py  data_process_fraprd2.sh  finetune_pl.py  merge_scene_type_pkl.py  sim_demo_fraprd2.sh  sim_guidance_demo_fraprd2.sh  split_json.py  torch_run_factorized.sh  torch_run_factorized_pl.sh  train_factorized_predictor.py  train_pl.py
diffusion-planner-v2/train_splits/: nuplan_train_003.json  nuplan_train_004.json  nuplan_train_006.json  nuplan_train_009.json  nuplan_train_010.json  nuplan_train_011.json  nuplan_train_016.json  (+328 more)
docker/: Dockerfile  build.sh  run-docker
docker/poetry/unitraj/: pyproject.toml
helpers/: copy_files.py  create_mapping.py  move_files.py  move_files_resume.py
inpainting/: inpaint.py
metadrive/: setup.py
(+54 files in other folders)
