[project]
name = "unitraj"
version = "0.1.0"
description = ""
authors = [
    {name = "Luobin Wang"}
]
requires-python = ">=3.9.1,<3.11"
dependencies = [
    "aiohappyeyeballs (==2.4.3)",
    "aiohttp (==3.11.8)",
    "aiosignal (==1.3.1)",
    "async-timeout (==5.0.1)",
    "attrs (==24.2.0)",
    "contourpy",
    "cycler (==0.12.1)",
    "easydict (==1.13)",
    "fonttools (==4.54.1)",
    "frozenlist (==1.4.1)",
    "fsspec (==2024.10.0)",
    "importlib-resources (==6.4.5)",
    "jinja2 (==3.1.4)",
    "kiwisolver (==1.4.7)",
    "lightning-utilities (==0.11.9)",
    "markupsafe (==3.0.2)",
    "matplotlib (==3.6.1)",
    "multidict (==6.1.0)",
    "numpy",
    "packaging (==24.1)",
    "propcache (==0.2.0)",
    "psutil (==6.1.0)",
    "pyparsing (==3.2.0)",
    "python-dateutil (==2.9.0.post0)",
    "pytorch-lightning (==2.0.3)",
    "pytz (==2024.2)",
    "pyyaml (==6.0.1)",
    "shapely (==2.0.6)",
    "six (==1.16.0)",
    "tqdm (==4.66.5)",
    "tzdata (==2024.2)",
    "zipp (==3.20.2)",
    "scipy (>=1.8,<1.9.2)",
    "yarl (==1.18.0)",
    "torch (==2.3.1)",
    "waymo-open-dataset-tf-2-11-0",
    "pandas (==1.5.3)",
    "array-record (==0.5.1)",
    "torch-geometric (==2.3.1)",
    "torch-cluster (==1.6.3)",
    "torch-scatter (==2.1.2)",
    "torchmetrics (==1.6.0)",
    "torchvision (==0.18.1)",
    "torch-sparse (==0.6.18)",
    "torch-spline-conv (==1.2.2)",
    "tqdm",
    "geopandas (<1.0)",
    "yapf",
    "requests",
    "pygame",
    "progressbar",
    "pillow",
    "lxml",
    "filelock",
    "Pygments",
    "mediapy",
    "wandb (>=0.20.1,<0.21.0)",
    "hydra-core (>=1.3.2,<2.0.0)",
    "scikit-learn (==1.2.2)",
    "einops (>=0.8.1,<0.9.0)",
    "panda3d-simplepbr (==0.10)",
    "h5py (>=3.14.0,<4.0.0)",
    "torchdiffeq (>=0.2.5,<0.3.0)",
    "aioboto3",
    "aiofiles",
    "bokeh (==2.4.3)",
    "boto3 (==1.24.59)",
    "cachetools",
    "casadi",
    "control (==0.9.1)",
    "coverage",
    "docker",
    "Fiona",
    "grpcio (==1.43.0)",
    "grpcio-tools (==1.43.0)",
    "guppy3 (==3.1.2)",
    "hypothesis", 
    "joblib",
    "jupyter",
    "jupyterlab",
    "mock",
    "moto",
    "nest_asyncio",
    "opencv-python (<=4.5.1.48)",
    "pre-commit",
    "pyarrow",
    "pyinstrument",
    "pyogrio",
    "pyquaternion (>=0.9.5)",
    "pytest",
    "rasterio",
    "ray",
    "retry",
    "rtree",
    "s3fs",
    "selenium",
    "setuptools",
    "SQLAlchemy (==1.4.27)",
    "sympy",
    "testbook",
    "tornado",
    "tqdm",
    "typer",
    "ujson",
    "urllib3 (==1.26.15)",
    "tensorboard (==2.11.2)",
    "timm (==1.0.10)",
    "mmengine (>=0.10.7,<0.11.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121/"
priority = "explicit"


[[tool.poetry.source]]
name = "torch-wheels"
url = "https://data.pyg.org/whl/torch-2.3.1+cu121.html"
priority = "explicit"

[tool.poetry.dependencies]
torch = {source = "pytorch"}
torch-cluster = {source = "torch-wheels"}
torch-scatter = {source = "torch-wheels"}
torchvision = {source = "pytorch"}
torch-sparse = {source = "torch-wheels"}
torch-spline-conv = {source = "torch-wheels"}
